--- a/build.gradle
+++ b/build.gradle
@@ -17,22 +17,27 @@ dependencies {
     implementation group: 'org.apache.maven.plugins', name: 'maven-surefire-plugin', version: '3.0.0-M7'
     implementation group: 'org.apache.maven', name: 'maven-plugin-api', version: '3.9.4'
     testImplementation group: 'org.testng', name: 'testng', version: '7.8.0'
-
 }
 
 test {
     useTestNG(){
-       suiteXmlBuilder().suite(name: 'All Test Suite') {
-            test(name : 'Test') {
-                classes('') {
-                    'class'(name: "com.example.testCases.UserTest")
-                    'class'(name: "com.example.testCases.PostTest")
-                    'class'(name: "com.example.testCases.CommentTest")
-                    'class'(name: "com.example.testCases.ToDoTest")
-                }
-            }
-        }
+        parallel 'tests'
+        threadCount 3
+
+//       suiteXmlBuilder().suite(name: 'All Test Suite') {
+//            test(name : 'Test') {
+//                classes('') {
+//                    'class'(name: "com.example.testCases.UserTest")
+//                    'class'(name: "com.example.testCases.PostTest")
+//                    'class'(name: "com.example.testCases.CommentTest")
+//                    'class'(name: "com.example.testCases.ToDoTest")
+//                }
+         //   }
+       // }
     }
 }
+
+
+
 
 
